# ErisPulse-EditVideoPlayer

./: LICENSE  README.md  pyproject.toml
ErisPulse_EditVideoPlayer/: Core.py  video_converter.py
